force-app/main/default/objects/AI_Conversation_History__c/AI_Conversation_History__c.object-meta.xml
<CustomObject>
    <label>AI Conversation History</label>
    <pluralLabel>AI Conversation Histories</pluralLabel>
    <sharingModel>Private</sharingModel>
    <allowReports>false</allowReports>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>AI Conversation Histories</relationshipLabel>
        <relationshipName>AI_Conversation_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <label>Provider</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Type__c</fullName>
        <label>Message Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AI Response</fullName>
                </value>
                <value>
                    <fullName>User Message</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Message_Content__c</fullName>
        <label>Message Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_From_Webhook__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is From Webhook</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>