force-app/main/default/objects/AI_Conversation_History__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case_</label>
    <type>Lookup</type>
    <referenceTo>Case</referenceTo>\n    <relationshipLabel>Case</relationshipLabel>\n    <relationshipName>Case
</CustomField>