force-app/main/default/objects/AI_Conversation_History__c/fields/Conversation_Data__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Data__c</fullName>
    <label>Conversation_Data_</label>
    <type>LongTextArea</type>
\n    <length>32768</length>
</CustomField>