force-app/main/default/objects/AI_Conversation_History__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <label>End_Time_</label>
    <type>DateTime</type>

</CustomField>