force-app/main/default/objects/AI_Conversation_History__c/fields/Is_From_Webhook__c.field-meta.xml
<CustomField>
    <fullName>Is_From_Webhook__c</fullName>
    <label>Is_From_Webhook_</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>