force-app/main/default/objects/AI_Conversation_History__c/fields/Message_Content__c.field-meta.xml
<CustomField>
    <fullName>Message_Content__c</fullName>
    <label>Message_Content_</label>
    <type>LongTextArea</type>
\n    <length>32768</length>
</CustomField>