force-app/main/default/objects/AI_Conversation_History__c/fields/Message_Count__c.field-meta.xml
<CustomField>
    <fullName>Message_Count__c</fullName>
    <label>Message_Count_</label>
    <type>Number</type>
    <precision>18</precision>\n    <scale>0</scale>
</CustomField>