force-app/main/default/objects/AI_Conversation_History__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <label>Start_Time_</label>
    <type>DateTime</type>

</CustomField>